--- a/IT ATEITIS/ITlyga.html
+++ b/IT ATEITIS/ITlyga.html
@@ -5,37 +5,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="ITlyga.css">
     <script src="ITlyga.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
 <body>
-<header>
-
-    <picture class="header1">
-
+<header class="logo">
+    <picture>
         <source media="(min-width: 769px)" srcset="FOTO/ptlyga_Logo.png">
         <source media="(min-width: 200px)" srcset="FOTO/logo.jpg">
         <img src="FOTO" alt="Logo"
-             style="height:40px;">
+             style="height:100px;">
     </picture>
-
-     Paplūdimio tinklinio lyga
 </header>
-<aside id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-        <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-        <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+<header>
+
+</header>
+<aside>
 
 </aside>
 <main>
-    <h1>Pagrindinė antraštė</h1>
-
 
 </main>
 <footer>
 
 
-
 </footer>
+<script src="ITlyga.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="Jquerycode.js"></script>
+</body>
+</html>
